[package]
name = "scpcb_redux_mapper"
version = "0.1.0"
edition = "2021"

[dependencies]
rand = "0.8.5"

[dev-dependencies]
image = "0.24.5"
image_colored_text = "0.1.2"
rusttype = "0.9.3"
clap = { version = "4.3.19", features = ["derive"] }

[[example]]
name = "example"
path = "examples/example.rs"
